WS-1101: initial theming of UCLA Gateway

--- a/ucla_gateway.info.yml
+++ b/ucla_gateway.info.yml
@@ -13,6 +13,7 @@ regions:
   hero: Hero
   nav_hero: Nav Hero
   nav_main: Nav Main
+  secondary_nav: Sidebar Nav
   content: Content
   nav_left: Nav Left
   footer: Footer  
