updates composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "z3cka/ucla_gateway",
+    "name": "uclalibrary/ucla_gateway",
     "description": "The UCLA Gateway theme.",
     "type": "drupal-theme",
     "license": "¯\\_(ツ)_/¯",
