adds @eb to the authors

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
     "license": "¯\\_(ツ)_/¯",
     "authors": [
         {
+            "name": "Elaine Blakeman",
+            "email": "elaineblakeman@library.ucla.edu"
+        },
+        {
             "name": "Casey Grzecka",
             "email": "cgrzecka@library.ucla.edu"
         }
